# omnihuman-sdk

./: CHANGELOG.md  CONTRIBUTING.md  README.md
go/: README.md  go.mod
go/omnihuman/: client.go  client_test.go  contract_gen.go  slug.go  types.go
java/: README.md  build.gradle.kts  settings.gradle.kts
java/runapi-omnihuman/: build.gradle.kts
java/runapi-omnihuman/src/main/java/ai/runapi/omnihuman/: OmnihumanClient.java
java/runapi-omnihuman/src/test/java/ai/runapi/omnihuman/: OmnihumanClientTest.java  OmnihumanLiveApiSmokeTest.java  (+1 more)
js/: README.md  package.json
js/skills/omnihuman/: README.md  SKILL.md
js/src/: client.ts  contract_gen.ts  index.ts  types.ts
js/src/resources/: audio-to-video.ts  human-identification.ts  subject-detection.ts
js/tests/: smoke.test.ts
js/tests/unit/: resources.test.ts
python/: README.md  pyproject.toml
python/src/runapi/omnihuman/: __init__.py  client.py  contract_gen.py  types.py
python/src/runapi/omnihuman/resources/: __init__.py  audio_to_video.py  human_identification.py  subject_detection.py
python/tests/: test_client.py
ruby/: README.md  runapi-omnihuman.gemspec
ruby/lib/: runapi-omnihuman.rb
ruby/lib/runapi/: omnihuman.rb
ruby/lib/runapi/omnihuman/: client.rb  contract_gen.rb  types.rb
ruby/lib/runapi/omnihuman/resources/: audio_to_video.rb  human_identification.rb  subject_detection.rb
ruby/spec/: spec_helper.rb
ruby/spec/runapi/omnihuman/: client_spec.rb
ruby/spec/runapi/omnihuman/resources/: audio_to_video_spec.rb  human_identification_spec.rb  subject_detection_spec.rb
(+23 files in other folders)
